<resources>
    <string name="app_name">CitRep</string>
    <string name="app_description">Los reportes a las autoridades al alcanze de su bolsillo</string>
    <string name="user_hint">Usuario</string>
    <string name="password_hint">Contraseña</string>
    <string name="btn_login">Login</string>
    <string name="sign_up_label"><u>Aún no tienes una cuenta registrate</u></string>
    <string name="email_hint">Email</string>
    <string name="btn_sign_up">Registrar</string>
    <string name="account_login_label"><u>Ya tienes una cuenta inicia sesión</u></string>
    <string name="confirm_password_hint">Confirma tu contraseña</string>
    <string name="sign_up_instructions">Estas a nada de finalizar tu registro</string>
    <string name="name_hint">Nombre</string>
    <string name="email_placeholder">algo@gmail.com</string>
    <string name="logo_content_description">Logo</string>
    <string name="ops_error">Ops! Ha ocurrido un error, intentalo de nuevo mas tarde</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Inicio</string>
    <string name="title_account">Perfil</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="verified_check_content_description">verified check</string>
    <string name="complain_description">¿Que incidente presentas hoy?</string>
    <string name="publish">Publicar</string>
    <string name="write_compliant_hint">Escribe tu problema aqui …</string>
    <string name="capture_image_error">No fue posible obtener la imagen</string>
    <string name="attach_file_content_description">attach file</string>

    <string name="give_persmissions">Es necesario conceder los permisos para continuar.</string>
    <string name="error_get_image">Ha ocurrido un error en la selección de tu imagen</string>
    <string name="max_evidences_loaded">Has alcanzado el maximo de evidencias</string>
    <string name="ops_error_upload_images">Ops! Ocurrio un error. No fue posible cargar tus imagenes…</string>
    <string name="success_post_complain">La publicación se realizo exitosamente</string>
    <string name="post_empty">Por favor llena la descripción de tu post antes de continuar :\'(</string>
    <string name="like">Me gusta</string>
    <string name="comments">Comentarios</string>
    <string name="share">Compartir</string>
    <string name="like_icon_content_description">like icon</string>
    <string name="comment_icon_content_description">comment icon</string>
    <string name="share_icon_content_description">share icon</string>
    <string name="evidence">evidence</string>
    <string name="not_implemented">Lo sentimos por ahora esta funcionalidad no esta disponible</string>
    <string name="too_many_requests">Has realizado demasiados intentos, intentalo de nuevo más tarde</string>


    <string name="filter_view_citrep">CitRep</string>
    <string name="verified">Verificado</string>
    <string name="with_out_verified">Sin verificar</string>
    <string name="verify_account">Verificar cuenta</string>
    <string name="settings">Ajustes</string>
    <string name="terms_and_conditions">Terminos y condiciones</string>
    <string name="log_out">Cerrar sesión</string>
    <string name="success_signup">¡La creación de tu usuario ha sido exitosa!</string>
    <string name="expired_deep_link">El enlace ha caducado por favor intentalo de nuevo...</string>
    <string name="email_verification_send_success">Hemos enviado un email a tu correo para continuar con la verificación</string>
    <string name="invalid_credentials_error">Credenciales invalidas, revisa tu usuario y contraseña</string>
</resources>