<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tonyakitori.citrep.framework.ui.screens.main.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tonyakitori.citrep.framework.ui.screens.main.fragments.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tonyakitori.citrep.framework.ui.screens.main.fragments.profile.ProfileFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="userId"
            android:defaultValue=""
            app:argType="string"
            app:nullable="true" />
        <argument
            android:name="secret"
            android:defaultValue=""
            app:argType="string"
            app:nullable="true" />
    </fragment>

</navigation>